--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,29 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #FAFAFA;
+  --foreground: #252B42;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  /* text color */
+  --color-text-primary: #252B42;
+  --color-text-secondary: #737373;
+  --color-text-muted: #BDBDBD;
+  --color-text-blue: #23A6F0;
+
+  --color-primary-blue: #007AFF;
+  --color-primary-green: #23856D;
+  --color-light-gray: #FAFAFA;
+  --color-light-blue: #DBECFF;
+  --color-gray: #E0E0E0;
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Inter, sans-serif;
 }
